--- a/Step2/var-let-const.html
+++ b/Step2/var-let-const.html
@@ -94,8 +94,12 @@
       if (true) {
         let b = 3;
       }
-      
+
       console.log(b);
     }
+
+    // Homework
+    // 1~4. 다음 코드의 콘솔창 출력 결과?
+    // 1
   </script>
 </html>
