--- a/Step1/index.html
+++ b/Step1/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hosting, 전역변수, 참조</title>
+    <title>Index</title>
   </head>
   <body>
-    <script></script>
+    <h1 id="hello">안녕하세요.</h1>
+
+    <script>
+      document.getElementById('hello').style.fontSize = '16px';
+    </script>
   </body>
 </html>
