--- a/Step2/var-let-const.html
+++ b/Step2/var-let-const.html
@@ -5,101 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>var, let, const</title>
   </head>
-  <body></body>
-  <script>
-    // 변수? 자료를 임시로 저장하는 공간
-    // var, let, const
+  <body>
+    <script>
+      // 변수? 자료를 임시로 저장하는 공간
+      // var, let, const
 
-    // 변수 특징
-    /*
-      - var: 재선언O, 재할당O, 범위 function
-      - let: 재선언X, 재할당O, 범위 {}
-      - const: 재선언X, 재할당X, 범위 {}
-    */
+      // 변수 특징
+      /*
+        - var: 재선언O, 재할당O, 범위 function
+        - let: 재선언X, 재할당O, 범위 {}
+        - const: 재선언X, 재할당X, 범위 {}
+      */
 
-    // 1. var
-    var name = '소다미';
-    console.log(name);
-    var name = '소현';
-    console.log(name);
-    // 재할당
-    name = '이경순';
-    console.log(name);
-    // 범위 - function 안에서만 존재함
-    function test1() {
-      var name = '소병윤';
-      name;
-    }
-
-    // 2. let
-    let age = 30;
-    // 범위 - {} 안에서만 존재함
-    if (true) {
-      let age = 20;
-    }
-
-    // 3. const(constant 변하지 않는 것)
-    // object 내부의 값을 변경하는 건 ㄱㅊ음
-    const person = { name: '소다미' };
-    person['name'] = '소현';
-    console.log(person['name']);
-
-    // 수정 불가능한 오브젝트를 만들고 싶으면?
-    // Object.freeze(오브젝트명)
-    Object.freeze(person);
-
-    // 4. 변수의 Hoisting 현상: 변수의 선언을 변수 범위 맨 위로 끌고 오는 현상
-    // 함수 선언도 Hoisting 현상이 일어남
-    /* 
-      1. 아직 변수 선언을 안 했는데 먼저 출력하면?
-        - error: 변수 '변수명' is not defined
-        - undefined: 아직 할당되지 않은 변수에 들어가있는 자료형
-    */
-    console.log(나이);
-    var 나이 = 30;
-    console.log(나이);
-
-    /*
-      2. 변수 여러 개 동시에 만들기
-    */
-    var 나이 = 30,
-      이름 = '소다미',
-      성별 = '여자';
-
-    /*
-      3. 전역변수: 모든 곳에서 쓸 수 있는 변수
-        - 밖에 있는 변수는 안에서 자유롭게 사용 가능함
-    */
-    // 전역변수 - 사용 범위: 모든 곳
-    var 나이 = 30;
-
-    function 함수() {
-      console.log(나이);
-
-      // 지역변수 - 사용 범위: 함수 내
-      var 지역 = '서울';
-    }
-    함수();
-
-    // window로 전역변수 만들기 - 사용 권장
-    window.이름 = '소';
-    console.log(이름);
-    console.log(window.이름);
-
-    // 연습
-    if (true) {
-      let a = 1;
-      var b = 2;
-
-      if (true) {
-        let b = 3;
+      // 1. var
+      var name = '소다미';
+      console.log(name);
+      var name = '소현';
+      console.log(name);
+      // 재할당
+      name = '이경순';
+      console.log(name);
+      // 범위 - function 안에서만 존재함
+      function test1() {
+        var name = '소병윤';
+        name;
       }
 
-      console.log(b);
-    }
+      // 2. let
+      let age = 30;
+      // 범위 - {} 안에서만 존재함
+      if (true) {
+        let age = 20;
+      }
 
-    // Homework
-    // 1~4. 다음 코드의 콘솔창 출력 결과?
-    // 1
-  </script>
+      // 3. const(constant 변하지 않는 것)
+      // object 내부의 값을 변경하는 건 ㄱㅊ음
+      const person = { name: '소다미' };
+      person['name'] = '소현';
+      console.log(person['name']);
+
+      // 수정 불가능한 오브젝트를 만들고 싶으면?
+      // Object.freeze(오브젝트명)
+      Object.freeze(person);
+
+      // 4. 변수의 Hoisting 현상: 변수의 선언을 변수 범위 맨 위로 끌고 오는 현상
+      // 함수 선언도 Hoisting 현상이 일어남
+      /* 
+        1. 아직 변수 선언을 안 했는데 먼저 출력하면?
+          - error: 변수 '변수명' is not defined
+          - undefined: 아직 할당되지 않은 변수에 들어가있는 자료형
+      */
+      console.log(나이);
+      var 나이 = 30;
+      console.log(나이);
+
+      /*
+        2. 변수 여러 개 동시에 만들기
+      */
+      var 나이 = 30,
+        이름 = '소다미',
+        성별 = '여자';
+
+      /*
+        3. 전역변수: 모든 곳에서 쓸 수 있는 변수
+          - 밖에 있는 변수는 안에서 자유롭게 사용 가능함
+      */
+      // 전역변수 - 사용 범위: 모든 곳
+      var 나이 = 30;
+
+      function 함수() {
+        console.log(나이);
+
+        // 지역변수 - 사용 범위: 함수 내
+        var 지역 = '서울';
+      }
+      함수();
+
+      // window로 전역변수 만들기 - 사용 권장
+      window.이름 = '소';
+      console.log(이름);
+      console.log(window.이름);
+
+      // 연습
+      if (true) {
+        let a = 1;
+        var b = 2;
+
+        if (true) {
+          let b = 3;
+        }
+
+        console.log(b);
+      }
+
+      // Homework
+      // 1~4. 다음 코드의 콘솔창 출력 결과?
+      // 1
+    </script>
+  </body>
 </html>
