--- a/Step1/index.html
+++ b/Step1/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/main.css" />
+
     <title>Index</title>
   </head>
   <body>
-    <h1 id="hello">안녕하세요.</h1>
+    <!-- one-way UI 애니메이션 만들기 -->
+    <!--
+      1. class로 시작 스타일과 최종 스타일 만들기
+      2. 원할 때 최종 스타일로 변경해 달라고 JS 코드 짜기
+      3. 시작 스타일에 transition 추가하기
+    -->
 
+    <!-- modal -->
+    <div class="black-bg">
+      <div class="white-bg">
+        <h4>로그인하세요</h4>
+        <button class="btn btn-secondary" id="close">닫기</button>
+      </div>
+    </div>
+
+    <!-- navbar -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <span class="navbar-brand">Shop</span>
+        <button class="navbar-toggler" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+
+    <!-- list -->
+    <ul class="list-group">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A fourth item</li>
+      <li class="list-group-item">And a fifth one</li>
+    </ul>
+
+    <!-- modal button -->
+    <button type="button" class="btn btn-danger" id="login-btn">Login</button>
+
+    <!-- JS -->
     <script>
-      document.getElementById('hello').style.fontSize = '16px';
+      // nav
+      document.querySelector('.navbar-toggler').addEventListener('click', function () {
+        document.querySelector('.list-group').classList.toggle('show');
+      });
+
+      // modal
+      document.querySelector('#login-btn').addEventListener('click', function () {
+        document.querySelector('.black-bg').classList.add('show-modal');
+      });
+
+      document.querySelector('#close').addEventListener('click', function () {
+        document.querySelector('.black-bg').classList.remove('show-modal');
+      });
     </script>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
