--- a/Step1/index.html
+++ b/Step1/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -11,10 +10,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
     <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css" />
-
     <title>Index</title>
   </head>
   <body>
@@ -28,8 +25,17 @@
     <!-- modal -->
     <div class="black-bg">
       <div class="white-bg">
-        <h4>로그인하세요</h4>
-        <button class="btn btn-secondary" id="close">닫기</button>
+        <h4>Please log in.</h4>
+        <form action="./success.html">
+          <div class="my-3">
+            <input type="text" class="form-control" id="email" />
+          </div>
+          <div class="my-3">
+            <input type="password" class="form-control" id="password" />
+          </div>
+          <button type="submit" class="btn btn-primary" id="send">Submit</button>
+          <button type="button" class="btn btn-secondary" id="close">Close</button>
+        </form>
       </div>
     </div>
 
@@ -52,8 +58,11 @@
       <li class="list-group-item">And a fifth one</li>
     </ul>
 
-    <!-- modal button -->
-    <button type="button" class="btn btn-danger" id="login-btn">Login</button>
+    <div class="main-bg">
+      <h4>Shirts on sale!</h4>
+      <!-- modal button -->
+      <button type="button" class="btn btn-danger" id="login-btn">Login</button>
+    </div>
 
     <!-- JS -->
     <script>
@@ -70,6 +79,33 @@
       document.querySelector('#close').addEventListener('click', function () {
         document.querySelector('.black-bg').classList.remove('show-modal');
       });
+
+      // Login - input
+      // 1. 전송 버튼 눌렀을 때, input에 입력한 값이 공백이면 알림창 띄우기 - ID, Password
+      document.querySelector('#send').addEventListener('click', function (e) {
+        if (document.querySelector('#email').value == '') {
+          alert('Please enter your ID.');
+          // 폼 전송 막기
+          e.preventDefault();
+        } else if (document.querySelector('#password').value == '') {
+          alert('Please enter your password.');
+          // 폼 전송 막기
+          e.preventDefault();
+        }
+        // 2. 비밀번호가 6자 미만이면 알림창 띄우기
+        else if (document.querySelector('#password').value.length < 6) {
+          alert('Please enter a password of at least 6 characters.');
+          // 폼 전송 막기
+          e.preventDefault();
+        }
+      });
+
+      // 3. <input>에서만 일어나는 input 이벤트
+      // 3-1. input - <input>에 입력한 값이 변할 때 실행됨
+      document.querySelector('#email').addEventListener('input', function () {});
+      
+      // 3-2. change - <input>에 입력한 값이 변하고, 포커스를 잃을 때 발생
+      document.querySelector('#email').addEventListener('change', function () {});
     </script>
 
     <!-- Bootstrap JS -->
