--- a/input/to-do-list/index.html
+++ b/input/to-do-list/index.html
@@ -11,8 +11,18 @@
   </head>
   <body>
     <main>
-      <!-- modal -->
-      <div class="black-bg">
+      <!-- modal - 공백 체크 -->
+      <div class="black-bg" id="blank-chk">
+        <div class="white-bg">
+          <p>오늘의 할 일을 입력해 주세요.</p>
+          <div class="btn-box">
+            <button type="button" class="btn-style" id="close-btn">닫기</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- modal - 삭제 여부 -->
+      <div class="black-bg" id="del-chk">
         <div class="white-bg">
           <p>지울까용?</p>
           <div class="btn-box">
