--- a/input/to-do-list/index.html
+++ b/input/to-do-list/index.html
@@ -24,9 +24,9 @@
       <!-- modal - 삭제 여부 -->
       <div class="black-bg" id="del-chk">
         <div class="white-bg">
-          <p>지울까용?</p>
+          <p>삭제할까요?</p>
           <div class="btn-box">
-            <button type="button" class="btn-style" id="yes-btn">네</button>
+            <button type="button" class="btn-style" id="yes-btn">예</button>
             <button type="button" class="btn-style" id="no-btn">아니오</button>
           </div>
         </div>
