--- a/input/to-do-list/index.html
+++ b/input/to-do-list/index.html
@@ -7,7 +7,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
     <!-- JS -->
-    <script src="./main.js" defer></script>
+    <!-- <script src="./main.js" defer></script> -->
+    <script src="./main-copy.js" defer></script>
   </head>
   <body>
     <main>
@@ -33,6 +34,7 @@
       </div>
 
       <!-- <div id="test"></div> -->
+
       <div class="main-bg">
         <div class="todo-wrap">
           <div class="input-wrap">
@@ -48,6 +50,9 @@
           </div>
           <div class="list-wrap">
             <ul></ul>
+          </div>
+          <div>
+            <button class="all-btn" type="button">모두 선택</button>
           </div>
         </div>
       </div>
