--- a/input/to-do-list/index.html
+++ b/input/to-do-list/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- JS -->
     <!-- <script src="./main.js" defer></script> -->
-    <script src="./main-copy.js" defer></script>
+    <!-- <script src="./main-copy.js" defer></script> -->
+    <script src="./main-copy-copy.js" defer></script>
   </head>
   <body>
     <main>
