미디어쿼리

--- a/input/to-do-list/index.html
+++ b/input/to-do-list/index.html
@@ -40,8 +40,8 @@
         <div class="todo-wrap">
           <div class="input-wrap">
             <h1>TO DO LIST</h1>
-            <div class="input-box flex">
-              <div>
+            <div class="flex">
+              <div class="input-box">
                 <input id="input-txt" type="text" placeholder="오늘의 할 일은?" />
               </div>
               <div class="plus-box">
